--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SlideShow</title>
 </head>
+<style>
+    .container{
+        width: fit-content;
+        margin: 150px auto;
+    }
+    .Slide{
+        height: 500px;
+        width: 800px;
+        object-fit: cover;
+        border-radius: 20px;
+    }
+</style>
+
 <body>
-    
-</body>
+    <div class="container">
+        <img src="./Images/bird_1.jpg" alt="bird_1" class="Slide">
+    </div>
+
 </html>
