--- a/index.html
+++ b/index.html
@@ -5,35 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SlideShow</title>
+    <link href="style.css" rel="stylesheet"/>
 </head>
-<style>
-    .container{
-        width: fit-content;
-        margin: 150px auto;
-        position: relative;
-    }
-    .Slide{
-        height: 500px;
-        width: 800px;
-        object-fit: cover;
-        border-radius: 20px;
-    }
-    .symbols{
-        position: absolute;
-        height: 50px;
-    }
-    .symbols:hover{
-        cursor: pointer;
-        transform: scale(1.1);
-    }
-    .previous{
-        left: -55px;
-        top: 200px;
-    }
-    .next{
-        top: 200px;
-    }
-</style>
 
 <body>
     <div class="container">
@@ -42,31 +15,6 @@
         <img src="./Images/backward-arrow.png" alt="backward-arrow" class="symbols previous" onclick="prev()"/>
         <img src="./Images/Forward.png" alt="Forward" class="symbols next" onclick="next()"/>
     </div>
-    <script>
-        const images = ["./Images/bird_1.jpg","./Images/bird_2.jpg","./Images/bird_3.jpg","./Images/bird_4.jpg","./Images/bird_5.jpg"];
-        let index = 0;
-        const slide = document.getElementById('slide');
-
-        function next(){
-            if(index < images.length-1){
-            index++;
-            }
-            else{
-                index= 0;
-            }
-            slide.src= images[index];
-        }
-        function prev(){
-            if(index > 0){
-                index--;
-            }
-            else{
-                index = images.length-1;
-            }
-            slide.src = images[index];
-            
-        }
-        setInterval(next , 3000);
-    </script>
+    <script src="script.js"></script>
     </body>
 </html>
